fix: improve readability

--- a/src/discrete-layer/components/system-status/cell-renderer/job-details.raster-job-data.css
+++ b/src/discrete-layer/components/system-status/cell-renderer/job-details.raster-job-data.css
@@ -40,3 +40,7 @@ body[dir='rtl'] #rasterJobData .errorsCountContainer {
   align-items: center;
   justify-content: center;
 }
+
+#rasterJobData.jobDataContainer .spacer {
+  padding: 8px;
+}
